// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Events create can be created 1`] = `
Object {
  "data": Object {
    "createEvent": Object {
      "description": Array [
        Object {
          "children": Array [
            Object {
              "text": "Event Bio Heading",
            },
          ],
          "type": "heading-one",
        },
        Object {
          "children": Array [
            Object {
              "text": "event bio text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "endsAt": 2020-11-25T22:00:00.000Z,
      "id": Any<String>,
      "image": null,
      "name": "Test Event",
      "startsAt": 2020-11-25T20:00:00.000Z,
      "status": "SCHEDULED",
      "tags": ArrayContaining [
        ObjectContaining {
          "id": Any<String>,
          "tag": Any<String>,
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Events create can be created with bare minimum 1`] = `
Object {
  "data": Object {
    "createEvent": Object {
      "description": Array [],
      "endsAt": null,
      "id": Any<String>,
      "image": null,
      "name": "Test Event",
      "startsAt": 2020-11-25T20:00:00.000Z,
      "status": "SCHEDULED",
      "tags": Array [],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Events create can not be created with endsAt before startsAt 1`] = `
Object {
  "data": Object {
    "createEvent": null,
  },
  "errors": Array [
    [GraphQLError: endsAt can not be earlier than startsAt],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Events update can not be updated with endsAt before startsAt 1`] = `
Object {
  "data": Object {
    "updateEvent": null,
  },
  "errors": Array [
    [GraphQLError: endsAt can not be earlier than startsAt],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Events update can not be updated with endsAt before startsAt 2`] = `
Object {
  "data": Object {
    "updateEvent": null,
  },
  "errors": Array [
    [GraphQLError: endsAt can not be earlier than startsAt],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
